# nexoedge

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CODEOWNER  CODE_OF_CONDUCT.md  CONFIG.md  CONTRIBUTING.md  Doxyfile  GOVERNANCE.md  INSTALL.md  LICENSE  MAINTAINER.md  OPEN_SOURCE_LIBS.md  README.md  SECURITY.md  SUPPORT.md  TESTING.md
.circleci/: config.yml
.github/: ISSUE_TEMPLATE  PULL_REQUEST_TEMPLATE
.github/workflows/: scorecard.yml
cmake/: ExternalProjects.cmake  InstallFunc.cmake
docker/: Readme.rst  build_images.sh  common.sh  install_docker.sh
docker-compose/: .env  Readme.md  cmd.sh  common.yaml  nexoedge-agents.yaml  nexoedge-cifs-cluster.yaml  nexoedge-proxy.yaml  smb.conf  upload-download-test.sh
docker-compose/comm_ssl/: agent_pkey  agent_skey  proxy_pkey  proxy_skey
docker/admin-portal/: Dockerfile  update_site_config.sh
docker/agent/: Dockerfile
docker/agent/scripts/: pre_update_config.sh  prepare_env.sh  run_ncloud.sh
docker/cifs/: Dockerfile  smb.conf
docker/cifs/scripts/: prepare_env_cifs.sh  run_ncloud_cifs.sh
docker/common/scripts/: common.sh  update_config.sh
docker/examples/cifs/: start_local_cluster.sh
docker/examples/cifs/docker-compose/: .env  Readme.md  cmd.sh  nexoedge-cluster.yml
docker/proxy/: Dockerfile
docker/proxy/scripts/: pre_update_config.sh  prepare_env.sh  run_ncloud.sh
docker/reporter/: Dockerfile
docker/reporter/scripts/: prepare_env.sh  run_reporter.sh
docker/system_tests/: common.sh  repair_flat_placement.sh  repair_using_car.sh
docker/tools/: gen_config_env_file.py
docker/webdis/: Dockerfile  update_webdis_config.sh
docs/user-doc/: Readme.md
docs/user-doc/source/: conf.py  config.rst  contributors.rst  index.rst  install.rst  intro.rst  monitor.rst  open-source.rst  quick_setup.rst  requirements.rst  spec.rst
k8s/: Readme.md  cmd.sh  kind-cluster.yaml  nexoedge-agent-1-deployment.yaml  nexoedge-agent-2-deployment.yaml  nexoedge-agents-configmap.yaml  nexoedge-agents-pv.yaml  nexoedge-agents-pvc.yaml  nexoedge-cifs-configmap.yaml  nexoedge-cifs-deployment.yaml  nexoedge-cifs-pv.yaml  nexoedge-cifs-pvc.yaml  nexoedge-metastore-deployment.yaml  nexoedge-metastore-pv.yaml  nexoedge-metastore-pvc.yaml  nexoedge-proxy-configmap.yaml  nexoedge-proxy-deployment.yaml  nexoedge-secrets.yaml  nexoedge-svc.yaml  smb-storage-class.yaml  upload-download-test.sh
sample/: agent.ini  agent_list.ini  general.ini  proxy.ini  storage_class.ini
scripts/metadata/: gen_dir_prefix.sh
scripts/package/: ncloud-agent.service  ncloud-proxy.service  postinst  prerm
src/agent/: CMakeLists.txt  agent.cc  agent.hh  agent_main.cc  container_manager.cc  container_manager.hh  coordinator.cc  coordinator.hh  io.cc  io.hh
src/agent/container/: alicloud.cc  alicloud.hh  all.hh  aws_s3.cc  aws_s3.hh  azure_blob.cc  azure_blob.hh  container.cc  container.hh  fs.cc  fs.hh
src/client/: CMakeLists.txt
src/client/c/: zmq_client.c  zmq_interface.c  zmq_interface.h
src/common/: CMakeLists.txt  checksum_calculator.hh  config.cc  config.hh  coordinator.cc  coordinator.hh  define.cc  define.hh  io.cc  io.hh  util.hh  zmq_int_define.hh
src/common/benchmark/: benchmark.cc  benchmark.hh  benchmark_time.cc  benchmark_time.hh
src/common/coding/: all.hh  coding.hh  coding_generator.hh  coding_options.cc  coding_options.hh  coding_util.hh  decoding_plan.hh  rs.cc  rs.hh
src/ds/: byte_buffer.hh  chunk.hh  chunk_event.hh  coding_meta.hh  coordinator_event.hh  file.cc  file.hh  file_info.hh  request_reply.hh  ring_buffer.hh  storage_class.hh  version_info.hh
src/proxy/: CMakeLists.txt  bg_chunk_handler.cc  bg_chunk_handler.hh  chunk_manager.cc  chunk_manager.hh  coordinator.cc  coordinator.hh  io.cc  io.hh  proxy.cc  proxy.hh  proxy_file_ops.cc  proxy_main.cc  stats_saver.cc  stats_saver.hh
src/proxy/dedup/: CMakeLists.txt  block_location.hh  dedup.hh
src/proxy/dedup/chunking/: chunker.hh
src/proxy/dedup/fingerprint/: fingerprint.cc  fingerprint.hh  fingerprint_all.hh  fingerprint_sha256.hh
src/proxy/dedup/impl/: dedup_all.hh  dedup_none.cc  dedup_none.hh
src/proxy/interfaces/: zmq.cc  zmq.hh
src/proxy/metastore/: all.hh  metastore.hh  redis_metastore.cc  redis_metastore.hh
src/proxy/staging/: staging.cc  staging.hh
src/proxy/staging/storage/: staging_fs_storage.cc  staging_fs_storage.hh  staging_storage.hh
src/tests/: CMakeLists.txt
src/tests/agent/: agent_test.cc  container_test.cc
src/tests/client/: zmq_client_test.c
src/tests/common/: coding_test.cc  coordinator_test.cc
src/tests/proxy/: metastore_test.cc
src/tools/: CMakeLists.txt  zmq_curve_key_pair_generator.cc  zmq_reporter.c
